objects/ssot__EngagementAnalysisText__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisPayloadText__c</fullName>
        <label>Engagement Analysis Payload</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextEndDateTime__c</fullName>
        <label>Engagement Analysis Text End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextSessionId__c</fullName>
        <label>Engagement Analysis Text Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextStartDateTime__c</fullName>
        <label>Engagement Analysis Text Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelSourceType__c</fullName>
        <label>Engagement Channel Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Analysis Text Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsightsExtractionStatus__c</fullName>
        <label>Insights Extraction Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>